# artificial-intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  end-to-end-hand-on-ml-refactor.py  end-to-end-ooo-pipeline.py  imports  model-training.py  pyproject.toml  requirements.txt  scratch.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
src/: deep-learning-hw-1.py  grokking-dl-nn.py  main.py  nn-rashka.py  nn-template.py  scratch.ipynb
