[project]
name = "ai-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bayesian-optimization",
    "black",
    "datasets",
    "fastapi",
    "huggingface_hub",
    "python-dotenv",
    "lightgbm",
    "nltk",
    "pytest",
    "spacy",
    "tensorflow",
    "tiktoken",
    "torch",
    "torchvision",
    "xgboost",
    "wandb",
]